<?php

interface IReminder
{
    /**
     * @return IMessage
     */
    public function getData();
}
